# GenAI_Projects

./: .gitignore  LLM_course.ipynb  LLM_finetuning_HF_course.ipynb  README.md  pyproject.toml  tmux.md  visualize_metrics.py
logs/trackio/: medical-sft-reasoning.db
notebooks/: GRPO_training_GSM8K.ipynb  LLM_course.ipynb  LLM_dataset_library_HF_course.ipynb  LLM_finetuning_HF_course.ipynb  SFT_medical_reasoning.ipynb
src/: SFT_medical_reasoning.py  main.py
